--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,25 +5,26 @@ h2 {
 
 .header-section {
     position: relative;
+    align-content: center;
     font-family: 'Jura', sans-serif;
     width: 100%;
     height: calc(100vh - 5vw);
     background-image: url(../images/mountains2.jpg);
-    text-align: center;
-    padding-top: 200px;
     color: #f67e7d;
 }
 
-/* .header-text {
+.header-text {
+  width: 100%;
+  text-align: center;
   position: absolute;
-  top: 200px;
-} */
+  align-content: center;
+  top: 100px;
+}
 
 .down-arrow {
   position: absolute;
-  /* margin-top: 100px; */
-  bottom: 400px;
   right: 50%;
+  top: 200px;
 }
 
 .arrow-btn {
